--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "ljs",
+  "name": "ljstudy",
   "version": "1.0.0",
-  "description": "javascript",
+  "description": "=learning JavaScript, 3rd Edition\r == Chapter 2 : JavaScript Development Tools",
   "main": "index.js",
-  "dependencies": {
-    "underscore": "^1.9.1"
-  },
-  "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
-    "gulp": "^4.0.0"
-  },
   "scripts": {
-    "test": "ljs"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Jake80p/ljstudy.git"
   },
-  "keywords": [
-    "ljs"
-  ],
-  "author": "ds",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Jake80p/ljstudy/issues"
   },
-  "homepage": "https://github.com/Jake80p/ljstudy#readme"
+  "homepage": "https://github.com/Jake80p/ljstudy#readme",
+  "dependencies": {
+    "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^5.0.0",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.2.0"
+  }
 }
